# hw_3

./: README.md  pyproject.toml  report.tex  requirements.txt
notebooks/: hw3_analysis.ipynb
src/: encoders.py  feature_creation.py  imputers.py  scalers.py
tests/: test_preprocessing.py
